# chessy

./: .gitignore  Cargo.toml  README.md
src/: agents.rs  algorithms.rs  attacks.rs  boards.rs  chess_errors.rs  engine.rs  game.rs  game_state.rs  magic_number_tables.rs  magic_numbers.rs  main.rs  moves.rs  pieces.rs  positional_tables.rs  positions.rs  transposition_table.rs  utils.rs
